add CounterService and inject to UserService by @Injectable

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 <h1>Active Users</h1>
 <app-user-active></app-user-active>
+<hr>
 <h1>Inactive Users</h1>
 <app-user-inactive></app-user-inactive>
+<hr>
+<h2>Active to Inactive set time : <span [innerText]="get_set_inactive_counter()"></span></h2>
+<h2>Inactive to Active set time : <span [innerText]="get_set_active_counter()"></span></h2>
